# chatbot_recruitment-

./: .gitignore  agent.py  app.py  convert_json_to_env.py  google_sheets_loader.py  knowledge_base.py  main.py  pyproject.toml  requirements.txt  tools.py  view_logs.sh
data/: recruitment_knowledge.csv
pages/: hr_dashboard.py
